Addition Of Smartwatch-Pic To Smartwatch Page (version 2)

--- a/PcPage.html
+++ b/PcPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styleSmartphonePage.css">
+    <link rel="stylesheet" href="Pages.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 
     <div id="page">
         <div id="main">
-            <div class="product">
+            <!-- <div class="product">
                 <img src="" alt="picture not found">
                 <p class="product-name"></p>
                 <p class="price"></p>
@@ -71,7 +71,7 @@
                 <img src="" alt="picture not found">
                 <p class="product-name"></p>
                 <p class="price"></p>
-            </div>
+            </div> -->
 
         </div>
     </div>
