--- a/smartwatchPage.html
+++ b/smartwatchPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styleSmartphonePage.css">
+    <link rel="stylesheet" href="Pages.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,64 +13,28 @@
     <div id="page">
         <div id="main">
             <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
+                <img src="src/pages/smartwatch-pic/smartwatch-amazfit GTS 4 Mini.png" alt="picture not found">
+                <p class="product-name">smartwatch-amazfit GTS 4 Mini</p>
+                <p class="price"> 140$ </p>
             </div>
 
             <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
+                <img src="src/pages/smartwatch-pic/smartwatch-apple Watch SE 2022 GPS 40mm.png" alt="picture not found">
+                <p class="product-name"> apple Watch SE 2022 GPS 40mm </p>
+                <p class="price"> 500$ </p>
             </div>
 
             <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
+                <img src="src/pages/smartwatch-pic/smartwatch-samsung Watch 5 Pro Titanium 45mm LTE.png" alt="picture not found">
+                <p class="product-name"> samsung Watch 5 Pro Titanium 45mm LTE </p>
+                <p class="price"> 475$ </p>
             </div>
 
 
             <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
-            </div>
-
-            <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
-            </div>
-
-            <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
-            </div>
-
-            <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
-            </div>
-
-            <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
-            </div>
-
-            <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
-            </div>
-
-            <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
+                <img src="src/pages/smartwatch-pic/smartwatch-xiaomi Mi Smart Band 7.jpg" alt="picture not found">
+                <p class="product-name"> smartwatch-xiaomi Mi Smart Band 7 </p>
+                <p class="price">95$ </p>
             </div>
 
         </div>
