--- a/mainPage.html
+++ b/mainPage.html
@@ -34,50 +34,64 @@
         <span class="product-window" id="smartWatch">
             <img class="product-image" src="src/main/garmin.png" alt="picture not found" width="150" height="100">
             <p class="p-text"> smartWatch - A smartwatch is a wearable computer in the form of a watch </p>
-            <a href="smartwatchPage.html" target="_blank"> <p class="button"> For All The SmartWatch >> </p> </a>
+            <a class="productPage-links" href="smartwatchPage.html" target="_blank">
+                <p class="button"> For All The SmartWatch >> </p>
+            </a>
         </span>
 
 
         <span class="product-window" id="headphone">
             <img class="product-image" src="src/main/headphone.png" alt="picture not found" width="150" height="100">
             <p class="p-text">Headphones are a pair of small loudspeaker drivers worn on or around the head over a
-                user's ears</p> 
-            <a href="headphonePage.html" target="_blank"><p class="button"> For All The Headphone >> </p></a>
+                user's ears</p>
+            <a class="productPage-links" href="headphonePage.html" target="_blank">
+                <p class="button"> For All The Headphone >> </p>
+            </a>
         </span>
 
         <span class="product-window" id="tablet">
             <img class="product-image" src="src/main/ipad.jpg" alt="picture not found" width="150" height="100">
             <p class="p-text"> tablet, is a mobile device, typically with a mobile operating system and touchscreen
                 display that combines computing functions along with portablety </p>
-                <a href="TabletPage.html" target="_blank"><p class="button"> For All The Tablet >> </p></a>
+            <a class="productPage-links" href="TabletPage.html" target="_blank">
+                <p class="button"> For All The Tablet >> </p>
+            </a>
         </span>
 
         <span class="product-window" id="laptop">
             <img class="product-image" src="src/main/laptop.jpg" alt="picture not found" width="150" height="100">
             <p class="p-text"> A laptop is a small, portable personal computer (PC) with a screen and alphanumeric
                 keyboard </p>
-                <a href="LaptopPage.html" target="_blank"> <p class="button"> For All The Laptop >> </p></a>
+            <a class="productPage-links" href="LaptopPage.html" target="_blank">
+                <p class="button"> For All The Laptop >> </p>
+            </a>
         </span>
 
 
         <span class="product-window" id="tv">
             <img class="product-image" src="src/main/tv.png" alt="picture not found" width="150" height="100">
             <p class="p-text"> tv is a big screen that can display antenna channels and DVD videos </p>
-            <a href="TvPage.html" target="_blank"><p class="button"> For All The TV >> </p></a>
+            <a class="productPage-links" href="TvPage.html" target="_blank">
+                <p class="button"> For All The TV >> </p>
+            </a>
         </span>
 
         <span class="product-window" id="smartphone">
             <img class="product-image" src="src/main/new-iphone.png" alt="picture not found" width="150" height="100">
             <p class="p-text"> A smartphone is a portable computer device that combines mobile telephone and computing
                 functions</p>
-                <a href="smartphonePage.html" target="_blank"> <p class="button">  For All The Smartphone >> </p> </a>
+            <a class="productPage-links" href="smartphonePage.html" target="_blank">
+                <p class="button"> For All The Smartphone >> </p>
+            </a>
         </span>
 
         <span class="product-window" id="desktop">
             <img class="product-image" src="src/main/hp-desktop.jpg" alt="picture not found" width="150" height="100">
             <p class="p-text"> A personal computer (PC) is an electronic device that manipulates information, or data
                 and can display it </p>
-            <a href="PcPage.html" target="_blank"> <p class="button"> For All The PC >> </p></a>
+            <a class="productPage-links" href="PcPage.html" target="_blank">
+                <p class="button"> For All The PC >> </p>
+            </a>
         </span>
 
 
@@ -90,23 +104,28 @@
         </div>
     </div>
 
+
     <div id="bottom">
 
         <div id="bottom-text">
-            <a href="aboutUsPage.html" target="_blank"><p> About Us </p></a>
-            <a href="content.html" target="_blank"><p> Contact </p></a>
+            <a class="bottom-links" href="aboutUsPage.html" target="_blank">
+                <p> About Us </p>
+            </a>
+            <a class="bottom-links" href="content.html" target="_blank">
+                <p> Contact </p>
+            </a>
         </div>
 
         <div id="logo">
             <!-- <a href=""> <img src="src/logo/last-whatsapp-logo.png" alt="the picture not found" width="50px" height="50px"></a> -->
-            <a href="https://twitter.com/" target="_blank"><img src="src/logo/last-twitter-logo.png" alt="the picture not found"
-                    width="50px" height="50px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="src/logo/instagram-logo.png" alt="the picture not found"
-                    width="50px" height="50px"></a>
-            <a href="https://he-il.facebook.com/" target="_blank"><img src="src/logo/last-facebook-logo.png" alt="the picture not found"
-                    width="50px" height="50px"></a>
-            <a href="https://www.linkedin.com/home" target="_blank"><img src="src/logo/linkedin-logo.png" alt="the picture not found"
-                    width="50px" height="50px"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="src/logo/last-twitter-logo.png"
+                    alt="the picture not found"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="src/logo/instagram-logo.png"
+                    alt="the picture not found"></a>
+            <a href="https://he-il.facebook.com/" target="_blank"><img src="src/logo/last-facebook-logo.png"
+                    alt="the picture not found"></a>
+            <a href="https://www.linkedin.com/home" target="_blank"><img src="src/logo/linkedin-logo.png"
+                    alt="the picture not found"></a>
         </div>
     </div>
 
