--- a/smartphonePage.html
+++ b/smartphonePage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styleSmartphonePage.css">
+    <link rel="stylesheet" href="Pages.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +13,11 @@
     <div id="page">
         <div id="main">
             <div class="product">
-                <img src="" alt="picture not found">
-                <p class="product-name"></p>
-                <p class="price"></p>
+                <img src="src/pages/smartphone-pic/smartphone-apple iPhone 14 128GB.png" alt="picture not found">
+                <p class="product-name"> apple iPhone 14 128GB </p>
+                <p class="price"> 900$ </p>
             </div>
-
+<!-- 
             <div class="product">
                 <img src="" alt="picture not found">
                 <p class="product-name"></p>
@@ -71,7 +71,7 @@
                 <img src="" alt="picture not found">
                 <p class="product-name"></p>
                 <p class="price"></p>
-            </div>
+            </div> -->
 
         </div>
     </div>
