change of border and shadow (version 5)

--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 <body>
     <div id="hero">
 
-        <div id="logo-headline">
-            <img src="src/hero/samsung-logo.jpg" alt="picture not found">
-            <img src="src/hero/lg-logo.jpg" alt="picture not found">
-            <img src="src/hero/sony-logo.png" alt="picture not found">
-            <img src="src/hero/huawei-logo.jpg" alt="picture not found">
-        </div>
+
 
         <div id="upper-hero">
             <h1 id="headline"> Tech Store </h1>
@@ -36,7 +31,7 @@
             <img class="product-image" src="src/main/garmin.png" alt="picture not found" width="150" height="100">
             <p class="p-text"> smartWatch - A smartwatch is a wearable computer in the form of a watch </p>
             <a class="productPage-links" href="smartwatchPage.html" target="_blank">
-                <p class="button"> For All The SmartWatch >> </p>
+                <p class="button"> For All SmartWatch >> </p>
             </a>
         </span>
 
@@ -46,7 +41,7 @@
             <p class="p-text">Headphones are a pair of small loudspeaker drivers worn on or around the head over a
                 user's ears</p>
             <a class="productPage-links" href="headphonePage.html" target="_blank">
-                <p class="button"> For All The Headphone >> </p>
+                <p class="button"> For All Headphone >> </p>
             </a>
         </span>
 
@@ -55,7 +50,7 @@
             <p class="p-text"> tablet, is a mobile device, typically with a mobile operating system and touchscreen
                 display that combines computing functions along with portablety </p>
             <a class="productPage-links" href="TabletPage.html" target="_blank">
-                <p class="button"> For All The Tablet >> </p>
+                <p class="button"> For All Tablet >> </p>
             </a>
         </span>
 
@@ -64,7 +59,7 @@
             <p class="p-text"> A laptop is a small, portable personal computer (PC) with a screen and alphanumeric
                 keyboard </p>
             <a class="productPage-links" href="LaptopPage.html" target="_blank">
-                <p class="button"> For All The Laptop >> </p>
+                <p class="button"> For All Laptop >> </p>
             </a>
         </span>
 
@@ -73,7 +68,7 @@
             <img class="product-image" src="src/main/tv.png" alt="picture not found" width="150" height="100">
             <p class="p-text"> tv is a big screen that can display antenna channels and DVD videos </p>
             <a class="productPage-links" href="TvPage.html" target="_blank">
-                <p class="button"> For All The TV >> </p>
+                <p class="button"> For All TV >> </p>
             </a>
         </span>
 
@@ -82,7 +77,7 @@
             <p class="p-text"> A smartphone is a portable computer device that combines mobile telephone and computing
                 functions</p>
             <a class="productPage-links" href="smartphonePage.html" target="_blank">
-                <p class="button"> For All The Smartphone >> </p>
+                <p class="button"> For All Smartphone >> </p>
             </a>
         </span>
 
@@ -91,7 +86,7 @@
             <p class="p-text"> A personal computer (PC) is an electronic device that manipulates information, or data
                 and can display it </p>
             <a class="productPage-links" href="PcPage.html" target="_blank">
-                <p class="button"> For All The PC >> </p>
+                <p class="button"> For All PC >> </p>
             </a>
         </span>
 
@@ -105,14 +100,30 @@
         </div>
     </div>
 
+    <div id="partner-section">
+        <div class="middel-line">
+            <h1 class="middel-word"> Our Partners </h1>
+        </div>
+        <div id="partner-logo">
+            <img src="src/our partners/apple-logo.png" alt="picture not found">
+            <img src="src/our partners/huawei-logo.png" alt="picture not found">
+            <img src="src/our partners/lg-logo.png" alt="picture not found">
+            <img src="src/our partners/samsung-logo.png" alt="picture not found">
+            <img src="src/our partners/sony-logo.png" alt="picture not found">
+        </div>
+    </div>
 
     <div id="bottom">
 
         <div id="bottom-text">
-            <a class="bottom-links" href="aboutUsPage.html" target="_blank">
+            <!-- <a class="bottom-links" href="aboutUsPage.html" target="_blank">
+                <p> About Us </p> -->
+            <a class="bottom-links" href="" target="_blank">
                 <p> About Us </p>
             </a>
-            <a class="bottom-links" href="content.html" target="_blank">
+            <!-- <a class="bottom-links" href="content.html" target="_blank">
+                <p> Contact </p> -->
+            <a class="bottom-links" href="" target="_blank">
                 <p> Contact </p>
             </a>
         </div>
