chaange favicon (version 6)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="src/favicon (1).ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/favicon/android-chrome-192x192.png" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="src/favicon (1).ico" type="image/x-icon"> -->
+
     <link rel="stylesheet" href="style-mainPage.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
