addition of up-jumper-arrow and move-sticky headline (version 7)

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 </head>
 
 <body>
+
+
+    <a id="arrow-link" href=""><img id="arrow" src="src/up-arrow-logo4.png" alt="picture not found"></a>
+    
     <div id="hero">
-
-
-
-        <div id="upper-hero">
-            <h1 id="headline"> Tech Store </h1>
-        </div>
-
-
+        <!-- <div id="upper-hero"> -->
+        <h1 id="headline"> Tech Store </h1>
+        <!-- </div> -->
     </div>
 
     <div id="main">
@@ -92,7 +91,6 @@
             </a>
         </span>
 
-
     </div>
 
 
@@ -132,13 +130,13 @@
 
         <div id="logo">
             <!-- <a href=""> <img src="src/logo/last-whatsapp-logo.png" alt="the picture not found" width="50px" height="50px"></a> -->
-            <a href="https://twitter.com/" target="_blank"><img src="src/logo/last-twitter-logo.png"
+            <a href="https://twitter.com/" target="_blank"><img class="social-media-logo" src="src/logo/last-twitter-logo.png"
                     alt="the picture not found"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="src/logo/instagram-logo.png"
+            <a href="https://www.instagram.com/" target="_blank"><img class="social-media-logo" src="src/logo/instagram-logo.png"
                     alt="the picture not found"></a>
-            <a href="https://he-il.facebook.com/" target="_blank"><img src="src/logo/last-facebook-logo.png"
+            <a href="https://he-il.facebook.com/" target="_blank"><img class="social-media-logo" src="src/logo/last-facebook-logo.png"
                     alt="the picture not found"></a>
-            <a href="https://www.linkedin.com/home" target="_blank"><img src="src/logo/linkedin-logo.png"
+            <a href="https://www.linkedin.com/home" target="_blank"><img class="social-media-logo" src="src/logo/linkedin-logo.png"
                     alt="the picture not found"></a>
         </div>
     </div>
